# EmotionAI

./: .gitignore  README.md  data.dvc  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
emotionai/: app.py  dataset.py
mlruns/0/: meta.yaml
research/: EmotionAi_Code.ipynb  emotionai.ipynb
