[tool.poetry]
name = "emotionai"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
fairscale = "^0.4.13"
fire = "^0.5.0"
sentencepiece = "^0.1.99"
transformers = "^4.35.2"
datasets = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
