[tool.poetry]
name = "emotionai"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
transformers = "^4.35.2"
datasets = "^2.15.0"
dvc = "^3.30.3"
mlflow = "^2.8.1"
urllib3 = "^2.1.0"
dagshub = "^0.3.10"
streamlit = "^1.29.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
